--- a/test.html
+++ b/test.html
@@ -1,87 +1,80 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="test.css">
-    <title>Test</title>
+	<title>Final Assessment</title>
+	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
-
 <body>
-    <h1>Final Assessment - Palak Gupta</h1>
 
-    <div class="wrapper">
+	<h1>Final Assessment - Palak Gupta</h1>
+	<!--<a href="index.html" class="top">GO TO TOP</a>-->
 
-        <div class="box">
-            <div class="box11 a1">
-                <div class="inbox"></div>
-            </div>
+	<div class="wrapper-3">
+		<div class="box3 a3">
+			<div class="con">
 
-            <div class="box11 b1">
-                <div class="inbox"></div>
-            </div>
+			</div>
+		</div>
+		<div class="box3 b3">
+			<div class="con">
 
-            <div class="box12 c1">
-                <div class="inbox">
-                    <div class="list">
-                    <ol>
-                        <li>Box Model</li>
-                        <li>Positioning</li>
-                        <li>Forms</li>
-                        <li>Flex Box</li>
-                        <li>Responsiveness</li>
-                    </ol>
-                </div>
-                </div>
-            </div>
+			</div>
+		</div>
+		<div class="box3 c3">
+			<div class="con">
 
-            <h2 class="box-name">Box 1</h2>
-        </div>
+			</div>
+		</div>
+		<div class="box3 d3">
+			<div class="con">
 
-        <div class="box">
-            <div class="box21 a2">
-                <div class="inbox">1</div>
-            </div>
-
-            <div class="box21 b2">
-                <div class="inbox">2</div>
-            </div>
+			</div>
+		</div>
+	<h2 class="box-name">Box 2</h2>
+	</div>
 
 
-            <h2 class="box-name">Box 2</h2>
-        </div>
 
-        <div class="box">
 
-            <div class="box31 a3">
-                <div class="inbox">
-                <p>Dance in India comprises numerous styles of dances, generally classified as classical or folk.</p>
-            </div>
-            </div>
 
-            <div class="box31 b3">
+	<div class="wrapper-1">
+		<div class="box1 a1">
+			<div class="con con2">
+				<br> 1
+			</div>
+		</div>
+		<div class="box1 b1">
+			<div class="con con2">
+				<br> 2
+			</div>
+		</div>
+	<h2 class="box-name">Box 1</h2>
+	</div>
 
-                <img class="img1" src="dance.jpg" alt="dance">
 
-            </div>
+	<div class="wrapper-2">
+		<div class="box2 a2">
+			<div class="con con2">
+				<img class="image"src="dance.jpg"/>
+			</div>
+		</div>
+		<div class="box2 b2">
+			<div class="con">
+				<form class="form1">
+				  <label>Username: </label><br>
+				  <input type="text" name="name"><br>
+				  <label>Password: </label><br>
+				  <input type="password" name="password"><br><br>
+				  <input type="submit" value="Submit">
+				</form>
+			</div>
+		</div>
+	<h2 class="box-name">Box 3</h2>
+	</div>
 
-            <div class="box31 c3">
 
-                    <img class="img2" src="Rukmani-devi.jpg" alt="dance">
-            </div>
 
-            <div class="box31 d3">
-                <div class="inbox">
-                    <p>Rukmani-devi</p>
-                </div>
-            </div>
-            <h2 class="box-name">Box 3</h2>
-        </div>
 
-    </div>
-    <!--abc-->
 </body>
-
 </html>
